2013-06-12  Glenn Morris  <rgm@gnu.org>

	* ido.el (ido-delete-ignored-files): Rewrite to avoid cl-lib.

2013-06-12  Eyal Lotem  <eyal.lotem@gmail.com>  (tiny change)

	* ido.el (ido-wide-find-dirs-or-files): Respect ido-case-fold.

	* ido.el (ido-delete-ignored-files): New function,
	split from ido-make-file-list-1.
	(ido-wide-find-dirs-or-files): Maybe ignore files.  (Bug#13003)
	(ido-make-file-list-1): Use ido-delete-ignored-files.

2013-06-12  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (inferior-octave-startup)
	(inferior-octave-completion-table)
	(inferior-octave-track-window-width-change)
	(octave-eldoc-function-signatures, octave-help)
	(octave-find-definition): Use single quoted strings.
	(inferior-octave-startup-args): Change default value.
	(inferior-octave-startup): Do not hard code "-i" and
	"--no-line-editing".
	(inferior-octave-resync-dirs): Add optional arg NOERROR.
	(inferior-octave-directory-tracker): Use it.
	(octave-goto-function-definition): Robustify.
	(octave-help): Support highlighting operators in 'See also'.
	(octave-find-definition): Find subfunctions only in Octave mode.

2013-06-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help-fns.el (help-fns--compiler-macro): If the handler function is
	named, then put a link to it.
	* help-mode.el (help-function-cmacro): Adjust regexp for cl-lib names.
	* emacs-lisp/cl-macs.el (cl--compiler-macro-typep): New function.
	(cl-typep): Use it.
	(cl-eval-when): Simplify debug spec.
	(cl-define-compiler-macro): Use eval-and-compile.  Give a name to the
	compiler-macro function instead of setting `compiler-macro-file'.

2013-06-12  Stefan Monnier  <monnier@iro.umontreal.ca>
	    Daniel Hackney  <dan@haxney.org>

	First part of Daniel Hackney's patch to package.el.
	* emacs-lisp/package.el: Use defstruct.
	(package-desc): New, main struct.
	(package--bi-desc, package--ac-desc): New structs, used to describe the
	format in external files.